# bedmethyl

./: .gitignore  Cargo.toml  README.md
src/: cli.rs  config.rs  log_utils.rs  main.rs  process.rs  regions.rs  sample.rs  stats.rs
src/cli/: cli_model.rs
src/process/: distance.rs  heatmaps.rs  hist.rs  print_value.rs  reader.rs  smooth.rs  writer.rs
