[package]
name = "bedmethyl"
version = "0.5.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "~0.4"
stderrlog = "~0.5"
anyhow = "~1.0"
clap = {version = "~3.2", features = ["cargo"]}
compress_io = "~0.5"
lazy_static = "~1.4"
num_cpus = "1.13.0"
regex = "1"
crossbeam-channel = "~0.5"
crossbeam-utils = "~0.8"
libc = "~0.2"
r_htslib = { git = "https://github.com/heathsc/r_htslib.git" }
